# SerialLib

./: CMakeLists.txt  README.md  binarydata.cpp  binarydata.h  main.cpp  serializer.cpp  serializer.h  serializer_helpers.h  serialtest.h
spkg/: serializer.h  serializer_helpers.h
test/: a.out  main.cpp  serialtest.cpp  serialtest.h
